# infra-dotfiles

./: .gitignore  README.md  pyproject.toml
docs/: getting-started.md  glossary.md
docs/architecture/: application.md  glossary.md  index.md  kubernetes.md  pipeline.md  project.md
docs/deployment/: index.md  kubernetes.md
docs/reference/: application.md  pipeline.md  project.md
examples/.infra/: project.yaml
examples/.infra/application/: default.yaml
examples/.infra/ci/: default.yaml  pipeline-simple-uwsgi.yml
infra_cli/: __main__.py  schema.py
infra_cli/console/: __init__.py
infra_cli/console/commands/: __init__.py  init.py
infra_cli/console/commands/export/: __init__.py  charts.py
infra_cli/entity/application/: __init__.py  models.py  repository.py
infra_cli/entity/project/: __init__.py  models.py  repository.py
schema/: application.json  pipeline.json  project.json
