[tool.poetry]
name = "infra-cli"
version = "0.1.0"
description = "Tooling to provide the Heroku experience anywhere."
authors = ["James Ward <james@notjam.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
click = "=7.0"
click-log = "=0.3.2"
python-dotenv = "=0.10.2"
GitPython = "=2.1.11"
jsonschema = "=3.0.1"
PyYaml = "=5.1"
semver = "^2.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
infra = "infra_cli.console:run"